tests/dataset/tpc-ds/compiler/cpp/q15.error
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:75:8: error: redefinition of ‘struct CatalogSale’
   75 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:56:8: note: previous definition of ‘struct CatalogSale’
   56 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:80:8: error: redefinition of ‘struct Customer’
   80 | struct Customer {
      |        ^~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:61:8: note: previous definition of ‘struct Customer’
   61 | struct Customer {
      |        ^~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:89:8: error: redefinition of ‘struct DateDim’
   89 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:70:8: note: previous definition of ‘struct DateDim’
   70 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:95:12: error: ‘cs’ was not declared in this scope
   95 |   decltype(cs) cs;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:95:12: error: ‘cs’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:96:12: error: ‘c’ was not declared in this scope; did you mean ‘cs’?
   96 |   decltype(c) c;
      |            ^
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:96:12: error: ‘c’ was not declared in this scope; did you mean ‘cs’?
   96 |   decltype(c) c;
      |            ^
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:97:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   97 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:97:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   97 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:98:12: error: ‘d’ was not declared in this scope
   98 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:98:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:101:53: error: ‘ca’ was not declared in this scope
  101 |   decltype(std::unordered_map<std::string, decltype(ca.ca_zip)>{
      |                                                     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:101:53: error: ‘ca’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:101:63: error: template argument 2 is invalid
  101 |   decltype(std::unordered_map<std::string, decltype(ca.ca_zip)>{
      |                                                               ^
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:101:63: error: template argument 5 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:102:28: error: ‘ca’ was not declared in this scope
  102 |       {std::string("zip"), ca.ca_zip}}) key;
      |                            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:102:28: error: ‘ca’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:106:42: error: request for member ‘zip’ in ‘std::declval<__struct6>().__struct6::key’, which is of non-class type ‘int’
  106 |   decltype(std::declval<__struct6>().key.zip) ca_zip;
      |                                          ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:106:42: error: request for member ‘zip’ in ‘std::declval<__struct6>().__struct6::key’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:184:13: error: redefinition of ‘void __json(const Customer&)’
  184 | inline void __json(const Customer &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:129:13: note: ‘void __json(const Customer&)’ previously defined here
  129 | inline void __json(const Customer &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:234:13: error: redefinition of ‘void __json(const CatalogSale&)’
  234 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:109:13: note: ‘void __json(const CatalogSale&)’ previously defined here
  109 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:254:13: error: redefinition of ‘void __json(const DateDim&)’
  254 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:164:13: note: ‘void __json(const DateDim&)’ previously defined here
  164 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:332:29: error: ‘substr’ was not declared in this scope
  332 |                             substr(ca.ca_zip, 0, 5)) !=
      |                             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:27: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::unordered_map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’)
  361 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       int    std::unordered_map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:3:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<pair<const __cxx11::basic_string<char>, __cxx11::basic_string<char> > >&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__new_allocator<_Tp>’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ is not derived from ‘const std::__new_allocator<_Tp>’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const _CharT*’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:4:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:7:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:361:30: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  361 |               if (__g.key == __key) {
      |                              ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<pair<const __cxx11::basic_string<char>, __cxx11::basic_string<char> > >&, const allocator<pair<const __cxx11::basic_string<char>, __cxx11::basic_string<char> > >&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<std::pair<const std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:362:46: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  362 |                 __g.items.push_back(Filtered{cs, c, ca, d});
      |                                              ^~
      |                                              |
      |                                              CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:369:57: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  369 |                   __key, std::vector<Filtered>{Filtered{cs, c, ca, d}}});
      |                                                         ^~
      |                                                         |
      |                                                         CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:369:70: error: no matching function for call to ‘std::vector<Filtered>::vector(<brace-enclosed initializer list>)’
  369 |                   __key, std::vector<Filtered>{Filtered{cs, c, ca, d}}});
      |                                                                      ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Filtered; _Alloc = std::allocator<Filtered>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; allocator_type = std::allocator<Filtered>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; std::__type_identity_t<_Alloc> = std::allocator<Filtered>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; allocator_type = std::allocator<Filtered>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; allocator_type = std::allocator<Filtered>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; std::__type_identity_t<_Alloc> = std::allocator<Filtered>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; size_type = long unsigned int; value_type = Filtered; allocator_type = std::allocator<Filtered>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; size_type = long unsigned int; allocator_type = std::allocator<Filtered>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Filtered; _Alloc = std::allocator<Filtered>; allocator_type = std::allocator<Filtered>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Filtered; _Alloc = std::allocator<Filtered>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:376:58: error: request for member ‘zip’ in ‘std::declval<__struct6>().__struct6::key’, which is of non-class type ‘int’
  376 |         std::pair<decltype(std::declval<__struct6>().key.zip), __struct7>>
      |                                                          ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:376:58: error: request for member ‘zip’ in ‘std::declval<__struct6>().__struct6::key’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:376:64: error: template argument 1 is invalid
  376 |         std::pair<decltype(std::declval<__struct6>().key.zip), __struct7>>
      |                                                                ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:376:73: error: template argument 1 is invalid
  376 |         std::pair<decltype(std::declval<__struct6>().key.zip), __struct7>>
      |                                                                         ^~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:376:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:379:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  379 |       __items.push_back(
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:380:18: error: request for member ‘zip’ in ‘g.__struct6::key’, which is of non-class type ‘int’
  380 |           {g.key.zip,
      |                  ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:382:22: error: request for member ‘zip’ in ‘g.__struct6::key’, which is of non-class type ‘int’
  382 |                g.key.zip, ([&](auto v) {
      |                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:385:64: error: ‘struct Filtered’ has no member named ‘cs_sales_price’
  385 |                  std::vector<decltype(std::declval<Filtered>().cs_sales_price)>
      |                                                                ^~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:385:64: error: ‘struct Filtered’ has no member named ‘cs_sales_price’
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:385:79: error: template argument 1 is invalid
  385 |                  std::vector<decltype(std::declval<Filtered>().cs_sales_price)>
      |                                                                               ^
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:385:79: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:388:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  388 |                    __items.push_back(x.cs_sales_price);
      |                            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:388:40: error: ‘struct Filtered’ has no member named ‘cs_sales_price’
  388 |                    __items.push_back(x.cs_sales_price);
      |                                        ^~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:384:18:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:383:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  383 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                         ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:383:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  383 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                    ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:393:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  393 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:393:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  393 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:396:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  396 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:396:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  396 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq151014854168/001/prog.cpp:399:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<Filtered>’ requested
  305 |   std::vector<Filtered> filtered = ([&]() {
      |                                    ~~~~~~~~
  306 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |     for (auto cs : catalog_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  308 |       for (auto c : customer) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  309 |         if (!((cs.cs_bill_customer_sk == c.c_customer_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  310 |           continue;
      |           ~~~~~~~~~
  311 |         for (auto ca : customer_address) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  312 |           if (!((c.c_current_addr_sk == ca.ca_address_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  313 |             continue;
      |             ~~~~~~~~~
  314 |           for (auto d : date_dim) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~
  315 |             if (!((cs.cs_sold_date_sk == d.d_date_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  316 |               continue;
      |               ~~~~~~~~~
  317 |             if (!(((((((std::find(
      |             ~~~~~~~~~~~~~~~~~~~~~~
  318 |                             std::vector<std::string>{
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~
  319 |                                 std::string("85669"), std::string("86197"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  320 |                                 std::string("88274"), std::string("83405"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |                                 std::string("86475"), std::string("85392"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  322 |                                 std::string("85460"), std::string("80348"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  323 |                                 std::string("81792")}
      |                                 ~~~~~~~~~~~~~~~~~~~~~
  324 |                                 .begin(),
      |                                 ~~~~~~~~~
  325 |                             std::vector<std::string>{
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~
  326 |                                 std::string("85669"), std::string("86197"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  327 |                                 std::string("88274"), std::string("83405"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  328 |                                 std::string("86475"), std::string("85392"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  329 |                                 std::string("85460"), std::string("80348"),
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  330 |                                 std::string("81792")}
      |                                 ~~~~~~~~~~~~~~~~~~~~~
  331 |                                 .end(),
      |                                 ~~~~~~~
  332 |                             substr(ca.ca_zip, 0, 5)) !=
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |                         std::vector<std::string>{
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~
  334 |                             std::string("85669"), std::string("86197"),
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  335 |                             std::string("88274"), std::string("83405"),
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  336 |                             std::string("86475"), std::string("85392"),
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  337 |                             std::string("85460"), std::string("80348"),
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  338 |                             std::string("81792")}
      |                             ~~~~~~~~~~~~~~~~~~~~~
  339 |                             .end()) ||
      |                             ~~~~~~~~~~
  340 |                        (std::find(std::vector<std::string>{std::string("CA"),
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  341 |                                                            std::string("WA"),
      |                                                            ~~~~~~~~~~~~~~~~~~
  342 |                                                            std::string("GA")}
      |                                                            ~~~~~~~~~~~~~~~~~~
  343 |                                       .begin(),
      |                                       ~~~~~~~~~
  344 |                                   std::vector<std::string>{std::string("CA"),
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  345 |                                                            std::string("WA"),
      |                                                            ~~~~~~~~~~~~~~~~~~
  346 |                                                            std::string("GA")}
      |                                                            ~~~~~~~~~~~~~~~~~~
  347 |                                       .end(),
      |                                       ~~~~~~~
  348 |                                   ca.ca_state) !=
      |                                   ~~~~~~~~~~~~~~~
  349 |                         std::vector<std::string>{std::string("CA"),
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  350 |                                                  std::string("WA"),
      |                                                  ~~~~~~~~~~~~~~~~~~
  351 |                                                  std::string("GA")}
      |                                                  ~~~~~~~~~~~~~~~~~~
  352 |                             .end())) ||
      |                             ~~~~~~~~~~~
  353 |                       (cs.cs_sales_price > 500))) &&
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |                     (d.d_qoy == 1)) &&
      |                     ~~~~~~~~~~~~~~~~~~
  355 |                    (d.d_year == 2000))))
      |                    ~~~~~~~~~~~~~~~~~~~~~
  356 |               continue;
      |               ~~~~~~~~~
  357 |             auto __key = std::unordered_map<std::string, decltype(ca.ca_zip)>{
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  358 |                 {std::string("zip"), ca.ca_zip}};
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  359 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  360 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  362 |                 __g.items.push_back(Filtered{cs, c, ca, d});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  364 |                 break;
      |                 ~~~~~~
  365 |               }
      |               ~
  366 |             }
      |             ~
  367 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  368 |               __groups.push_back(__struct6{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  369 |                   __key, std::vector<Filtered>{Filtered{cs, c, ca, d}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  370 |             }
      |             ~
  371 |           }
      |           ~
  372 |         }
      |         ~
  373 |       }
      |       ~
  374 |     }
      |     ~
  375 |     std::vector<
      |     ~~~~~~~~~~~~
  376 |         std::pair<decltype(std::declval<__struct6>().key.zip), __struct7>>
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  377 |         __items;
      |         ~~~~~~~~
  378 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  379 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  380 |           {g.key.zip,
      |           ~~~~~~~~~~~
  381 |            __struct7{
      |            ~~~~~~~~~~
  382 |                g.key.zip, ([&](auto v) {
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~
  383 |                  return std::accumulate(v.begin(), v.end(), 0.0);
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  384 |                })(([&]() {
      |                ~~~~~~~~~~~
  385 |                  std::vector<decltype(std::declval<Filtered>().cs_sales_price)>
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  386 |                      __items;
      |                      ~~~~~~~~
  387 |                  for (auto x : g.items) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~
  388 |                    __items.push_back(x.cs_sales_price);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  389 |                  }
      |                  ~
  390 |                  return __items;
      |                  ~~~~~~~~~~~~~~~
  391 |                })())}});
      |                ~~~~~~~~~
  392 |     }
      |     ~
  393 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  394 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |     std::vector<__struct7> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  396 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  397 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |     return __res;
      |     ~~~~~~~~~~~~~
  399 |   })();
      |   ~~^~
